tests/ui/premature_math_namespace.stderr
error[E0432]: unresolved import `moirai::math::Q16`
 --> tests/ui/premature_math_namespace.rs:1:5
  |
1 | use moirai::math::Q16;
  |     ^^^^^^^^^^^^^^^^^ no `Q16` in `math`
  |
help: a similar name exists in the module
  |
1 - use moirai::math::Q16;
1 + use moirai::math::q16;
  |

error[E0603]: module `math` is private
 --> tests/ui/premature_math_namespace.rs:1:13
  |
1 | use moirai::math::Q16;
  |             ^^^^ private module
  |
note: the module `math` is defined here
 --> src/lib.rs
  |
  | mod math;
  | ^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/premature_math_namespace.rs:1:23
  |
1 | use moirai::math::Q16;
  |                       ^ consider adding a `main` function to `$DIR/tests/ui/premature_math_namespace.rs`
