tests/ui/premature_math_namespace.rs
use moirai::math::Q16;